JewishCampusConnect/mdapi-source/Jewish Campus Connections/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Student/Alum</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>University Faculty</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Of__c</fullName>
        <formula>Text( Expected__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Of</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Year__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Type_of_Student__c, &quot;Graduate Student&quot;)), 
If(MONTH(TODAY())&lt; VALUE($Label.jcampuconnect__dayofmonthtoswitch), 

CASE(Expected__c , 
Year(Today()), &quot;Senior&quot;, 
Year(Today())+1, &quot;Junior&quot;, 
Year(Today())+2, &quot;Sophomore&quot;, 
Year(Today())+3, &quot;Freshman&quot;, 
&quot;&quot;), 

CASE(Expected__c, 
Year(Today())+1, &quot;Senior&quot;, 
Year(Today())+2, &quot;Junior&quot;, 
Year(Today())+3, &quot;Sophomore&quot;, 
Year(Today())+4, &quot;Freshman&quot;, 
&quot;&quot;)), 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dad_Jewish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dad Jewish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Graduation_Date__c</fullName>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected__c</fullName>
        <formula>Year(Expected_Graduation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Graduation Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grad_Program__c</fullName>
        <label>Grad Program</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hebrew_Bday_Day__c</fullName>
        <label>Hebrew Bday Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hebrew_Bday_Month__c</fullName>
        <label>Hebrew Bday Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nisan</fullName>
                </value>
                <value>
                    <fullName>Iyyar</fullName>
                </value>
                <value>
                    <fullName>Sivan</fullName>
                </value>
                <value>
                    <fullName>Tammuz</fullName>
                </value>
                <value>
                    <fullName>Av</fullName>
                </value>
                <value>
                    <fullName>Elul</fullName>
                </value>
                <value>
                    <fullName>Tishrei</fullName>
                </value>
                <value>
                    <fullName>Cheshvan</fullName>
                </value>
                <value>
                    <fullName>Kislev</fullName>
                </value>
                <value>
                    <fullName>Tevel</fullName>
                </value>
                <value>
                    <fullName>Shevat</fullName>
                </value>
                <value>
                    <fullName>Adar I</fullName>
                </value>
                <value>
                    <fullName>Adar II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hebrew_Name__c</fullName>
        <label>Hebrew Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jewish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jewish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mom_Jewish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mom Jewish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_to_University__c</fullName>
        <formula>IF(NOT(ISBLANK(Expected_Graduation_Date__c)),IF(INCLUDES(Category__c , &quot;Student/Alum&quot;)  &amp;&amp; Expected_Graduation_Date__c &gt; Today(), &quot;Student&quot;, &quot;Alum&quot;), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship to University</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religious_Background__c</fullName>
        <label>Religious Background</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Student__c</fullName>
        <label>Type of Student</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undergraduate_School__c</fullName>
        <label>Undergraduate School</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Alum</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relationship_to_University__c</field>
            <operation>equals</operation>
            <value>Alum</value>
        </filters>
        <label>All Alum</label>
    </listViews>
    <listViews>
        <fullName>All_Parents</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filters>
        <label>All Parents</label>
    </listViews>
    <listViews>
        <fullName>All_Students</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Relationship_to_University__c</field>
            <operation>equals</operation>
            <value>Student</value>
        </filters>
        <label>All Students</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <validationRules>
        <fullName>CategoryMustBeEnterred</fullName>
        <active>true</active>
        <errorConditionFormula>IsBlank(Category__c)</errorConditionFormula>
        <errorDisplayField>Category__c</errorDisplayField>
        <errorMessage>Category Should be Filled Out</errorMessage>
    </validationRules>
</CustomObject>